[gd_scene load_steps=2 format=3 uid="uid://gg6r7gli0e6n"]

[ext_resource type="Script" path="res://main.gd" id="1_5gkyr"]

[node name="Control" type="Control" node_paths=PackedStringArray("about_dialog", "file_dialog", "file_name_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5gkyr")
about_dialog = NodePath("HBoxContainer/Panel/AboutButton/AboutDialog")
file_dialog = NodePath("HBoxContainer/Panel/MarginContainer/VBoxContainer/FileButton/FileDialog")
file_name_label = NodePath("HBoxContainer/Panel/MarginContainer/VBoxContainer/FileLabel")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FlagButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "üè¥ Flag"

[node name="BillboardButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "üéûÔ∏è Billboard"

[node name="InstructionsLabel" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Please drag and drop an image so that it can be displayed on the billboard"
autowrap_mode = 3

[node name="FileButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Open Image File"

[node name="FileDialog" type="FileDialog" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/FileButton"]
initial_position = 2
title = "Open a File"
size = Vector2i(1000, 600)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg", "*.jpeg")
show_hidden_files = true

[node name="FileLabel" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Image: "

[node name="StechTypeLabel" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Strech Type"

[node name="StechTypeItemList" type="ItemList" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
allow_reselect = true
auto_height = true
item_count = 2
item_0/text = "Best Fit"
item_1/text = "Strech Fit"

[node name="DarkModeCheckButton" type="CheckButton" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Night
"

[node name="AboutButton" type="Button" parent="HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
text = "About and Credits"

[node name="AboutDialog" type="AcceptDialog" parent="HBoxContainer/Panel/AboutButton"]
initial_position = 1
size = Vector2i(1123, 265)
dialog_text = "This application is made by Hasan Kadhem
engine used Godot 4.0.2
Credits for the models:
This work is based on \"Modern NYC Dwellings\" (https://sketchfab.com/3d-models/modern-nyc-dwellings-8ef9555171c44ba1872a17558f589630) by 99.Miles (https://sketchfab.com/99.Miles) licensed under CC-BY-4.0 (http://creativecommons.org/licenses/by/4.0/)
This work is based on \"Low Poly Billboard Sign - Standard\" (https://sketchfab.com/3d-models/low-poly-billboard-sign-standard-269d489f468c430da74ed4921ee6361d) by JeffK (https://sketchfab.com/jeffkolada) licensed under CC-BY-4.0 (http://creativecommons.org/licenses/by/4.0/)
"
dialog_autowrap = true

[node name="level" type="Node3D" parent="."]
unique_name_in_owner = true

[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/FlagButton" to="." method="_on_flag_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/BillboardButton" to="." method="_on_billboard_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/FileButton" to="." method="_on_file_button_pressed"]
[connection signal="file_selected" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/FileButton/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="HBoxContainer/Panel/AboutButton" to="." method="_on_about_button_pressed"]
